<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back"
                        android:gravity="center_horizontal"
                        android:text="@string/text_discover" />

                    <ListView
                        android:id="@+id/list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentEnd="false"
                        android:background="@drawable/back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.305" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back"
                        android:gravity="center_horizontal"
                        android:text="@string/text_paired" />

                    <ListView
                        android:id="@+id/listPaired"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="false"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentEnd="false"
                        android:background="@drawable/back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="135dp"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="0dp"
                        android:text="@string/Button_connection"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="277dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"

                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/Text_Try_connect" />

                        <TextView
                            android:id="@+id/textid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_connec"
                            tools:text="@string/Text_null" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"

                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:text="@string/Text_Connection_state" />

                        <TextView
                            android:id="@+id/text_connect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Text_val_state_connect" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                tools:layout_editor_absoluteY="1576dp" />

            <TextView
                android:id="@+id/texttest"
                android:layout_width="fill_parent"
                android:layout_height="23dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/text_in_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="165dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center|center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="165dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_in"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back"
                        android:gravity="center"
                        android:text="@string/Text_input" />

                    <ScrollView
                        android:id="@+id/LinearInScr"
                        android:layout_width="fill_parent"
                        android:layout_height="146dp"
                        android:layout_alignParentTop="false"
                        android:background="@drawable/back">

                        <LinearLayout
                            android:id="@+id/LinearIn"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" />


                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textOut"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back"
                        android:gravity="center"
                        android:text="@string/Text_Output" />

                    <ScrollView
                        android:id="@+id/LinearOutScr"
                        android:layout_width="fill_parent"
                        android:layout_height="146dp"
                        android:layout_alignParentTop="false"
                        android:background="@drawable/back">

                        <LinearLayout
                            android:id="@+id/LinearOut"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" />


                    </ScrollView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Edit"
                    android:layout_width="243dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/list"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toStartOf="@+id/btnSend"
                    android:hint="Enter your text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="77dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/list"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Send"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>